--- a/3 weeks.ipynb
+++ b/3 weeks.ipynb
@@ -5,12 +5,14 @@
    "id": "550626e5-7dcb-4daf-a695-4528772f360c",
    "metadata": {},
    "source": [
-    "### 인덱싱/슬라이싱"
+    "### 인덱싱 / 슬라이싱\n",
+    "- 하나의 대괄호에 쉼표로 다차원 배열의 인덱스를 표기함\n",
+    "- numpy 배열 슬라이싱의 결과는 원본의 참조임 $\\to$ 슬라이싱의 결과값을 바꾸면 원본도 바뀜"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "67654fc9-9661-400a-8de6-c2a5f17d33b8",
    "metadata": {},
    "outputs": [],
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1236756c-165c-4ab1-a112-e4f4f3eec7a3",
    "metadata": {},
    "outputs": [
@@ -32,7 +34,7 @@
        "       [ 8,  9, 10, 11]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "1d8bfa17-c442-40ef-a277-26ddcab8d55c",
    "metadata": {},
    "outputs": [
@@ -54,7 +56,7 @@
        "array([4, 5, 6, 7])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8d134df3-93bc-440f-9ce1-8bef5b9f0b4c",
    "metadata": {},
    "outputs": [
@@ -75,7 +77,7 @@
        "np.int64(11)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "f174b35d-51c5-4fa7-8c39-be40b555a23f",
    "metadata": {},
    "outputs": [
@@ -97,13 +99,13 @@
        "       [5, 6]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b=a[0:2, 1:3] # 슬라이싱\n",
+    "b=a[0:2, 1:3] # 슬라이싱 a[0][1], a[0][2], a[1][1], a[1][2]\n",
     "b"
    ]
   },
@@ -320,9 +322,9 @@
    "metadata": {},
    "source": [
     "### 펜시 인덱싱\n",
-    "##### 접근하고자 하는 위치의 인덱스를 리스트로 만들어 전달\n",
-    "##### 전달하는 배열이 숫자이면 해당 숫자 인덱스의 값이 선택됨\n",
-    "##### 전달하는 배열이 bool이면 True가 있는 위치의 인덱스들이 전달되어 요소를 선택하게 함"
+    "- 접근하고자 하는 위치의 인덱스를 리스트로 만들어 전달\n",
+    "- 전달하는 배열이 숫자이면 해당 숫자 인덱스의 값이 선택됨\n",
+    "- 전달하는 배열이 bool이면 True가 있는 위치의 인덱스들이 전달되어 요소를 선택하게 함"
    ]
   },
   {
@@ -570,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "ec343b77-cd91-40b9-aba3-498295928cda",
    "metadata": {},
    "outputs": [
@@ -590,7 +592,7 @@
        "        [27, 28, 29]]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,17 +625,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "id": "124be92d-5db4-4260-85b3-9278840272bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2, 20,  7,  9, 28])"
+       "array([ 0, 19,  8, 10, 28])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,12 +1407,14 @@
    "source": [
     "### 검색 기능\n",
     "- where(condition [,t,f]): 조건에 맞는 요소 찾기\n",
+    "  - condition: 검색에 사용할 조건식\n",
     "  - t: 조건에 맞는 값에 지정할 값이나 배열\n",
     "  - f: 조건에 틀린 값에 지정할 값이나 배열\n",
     "- nonzero(array): 요소 중에 0이 아닌 요소의 인덱스의 배열을 반환\n",
     "- all(array [, axis]): 모든 요소가 True인지 검색\n",
     "- any(array [, axis]): 어느 요소이든 True가 있는지 검색\n",
-    "##### 픽셀값(밝기값)의 크기로 픽셀들을 나누거나 어떤 처리를 해야 할 때 사용하면 처리가 쉬움"
+    "\n",
+    "-픽셀값(밝기값)의 크기로 픽셀들을 나누거나 어떤 처리를 해야 할 때 사용하면 처리가 쉬움"
    ]
   },
   {
@@ -2126,6 +2130,133 @@
     "Numpy와 OpenCV의 좌표 차이에 주의\n",
     " - Numpy: (i,j) -> 배열 인덱스[Height, Width]\n",
     " - OpenCV: (x,y) -> 직교 좌표계 [Width, Height]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c047b78b-689c-4f59-9be4-335eae90fa36",
+   "metadata": {},
+   "source": [
+    "- 영상처리: 입력된 영상을 어떤 목적을 위해 처리하는 기술\n",
+    "- 영상(image): 밝기와 색상이 다른 일정한 수의 화소들의 모음\n",
+    "- 화소(pixel): 영상의 최소 단위 구성 요소"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11a3a119-4f40-436d-852a-35cac534a45a",
+   "metadata": {},
+   "source": [
+    "- 영상처리\n",
+    "  - 어떤 목적을 위해 연산을 이용해 화소들에 대해 변화를 주는 것\n",
+    "  - 과거: 아날로그\n",
+    "  - 현재: 디지털\n",
+    "     - 디지털 영상은 밝기값과 위치값을 가진 일정 수의 화소들로 구성"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75fc21dc-b847-4d3f-9f62-511c2e4b14e7",
+   "metadata": {},
+   "source": [
+    "- 정지된 이미지를 연속적으로 보여줘서 움직이는 것처럼 보이게 함\n",
+    "- 프레임 정보를 그대로 저장하지 않음\n",
+    "  - 한 프레임 이후 다음 프레임의 차이가 발생하고 그 차이를 저장"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a091effa-dec3-42e9-b1c5-71360799b0e0",
+   "metadata": {},
+   "source": [
+    "### 영상처리 수준\n",
+    "- 처리 결과가 영상 자체: 저 수준의 영상 처리\n",
+    "- 처리 결과가 영상의 특성들: 고 수준의 영상 처리"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc33d63c-2cea-4e2f-8d4e-92b190ce7d47",
+   "metadata": {},
+   "source": [
+    "### 저 수준의 영상 처리\n",
+    "- 영상 획득: 실제 장면을 디지털 영상으로 바꾸는 과정\n",
+    "- 영상 향상: 영상을 보기 좋게 만드는 과정\n",
+    "- 영상 복원: 손상된 영상을 원래처럼 되돌리는 과정\n",
+    "- 변환 처리: 픽셀 도메인을 주파수 도메인으로 바꾸는 과정\n",
+    "- 영상 압축: 영상 크기를 줄여 저장·전송을 쉽게 하는 과정"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fa828a4-7483-419c-81ab-1dd67dae4513",
+   "metadata": {},
+   "source": [
+    "### 고 수준의 영상 처리\n",
+    "- 영상 분할: 의미있는 객체나 영역을 분리하는 과정\n",
+    "- 영상 표현: 분할된 객체나 영역을 수학적, 기하학적, 구조적 형태로 표현\n",
+    "  - 영상의 이미지가 어떤 이미지인지 설명(ex. 이 영상은 파란색이 많음)\n",
+    "- 영상 인식: 표현된 객체를 분류하고 의미를 부여하는 과정\n",
+    "  - 이게 무엇인가를 알아내는 것"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bd5ba50-6b06-44dd-91d8-56851e927dac",
+   "metadata": {},
+   "source": [
+    "### 처리 방법에 따른 기술 분류\n",
+    "- 화소 점 처리: 각 픽셀 단위로 독립적으로 처리, 한 픽셀의 출력은 그 픽셀의 입력값에 의존\n",
+    "- 화소 영역 처리: 한 픽셀을 처리할 때 그 주변 영역을 함께 고려(필터링)\n",
+    "- 기하학적 처리: 영상 전체의 좌표계 변환 수행, 픽셀값은 유지하고 (x,y)를 변화\n",
+    "- 변환 처리: 픽셀 도메인을 주파수 도메인으로 변환\n",
+    "- 프레임 처리: 단일 영상이 아닌 시간에 따라 연속된 영상(프레임)을 처리\n",
+    "  - 한 프레임과 다른 프레임의 관계를 처리"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41cc560e-f4ac-4274-b81c-7981bf396d85",
+   "metadata": {},
+   "source": [
+    "### 영상처리 관련 분야\n",
+    "- 영상 처리: 입력 영상을 처리해 출력으로 처리된 영상\n",
+    "- 컴퓨터 그래픽스: 데이터를 사용해 원하는 영상을 만들어 내는 기술\n",
+    "- 컴퓨터 비전: 기본적인 영상처리를 바탕으로 영상에서 특정한 정보를 추출해 처리하는 기술"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5461e512-d0d0-4017-bab0-adfce87f37c7",
+   "metadata": {},
+   "source": [
+    "### 영상의 형성 과정\n",
+    "- 샘플링: 무한한 연속된 값을 일정한 해상도에 따라 유한 개의 화소 수만큼 입력값을 취하는 과정\n",
+    "- 양자화: 제한된 비트 수로 화소 값을 나타내기 위해 밝기값을 정수화시키는 과정\n",
+    "\n",
+    "- 이 두 과정은 동시에 일어남 $\\to$ 뽑자마자 자르고 저장함"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b14055ab-2b5a-469d-bceb-d99b5c2d84ff",
+   "metadata": {},
+   "source": [
+    "### 디지털 영상 표현\n",
+    "- opencv에서는 (x, y)의 형태라면 numpy는 화소들의 집합이 M x N 크기의 영상으로 표현됨"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76f4fa8a-09e6-44e1-8e51-705600350a99",
+   "metadata": {},
+   "source": [
+    "### OpenCV\n",
+    "- 영상처리와 컴퓨터 비전 관련 오픈소스 라이브러리\n",
+    "- 영상처리, 컴퓨터 비전 및 기계 학습과 관련된 전통적인 알고리즘\n",
+    "- 얼굴 검출과 인식, 객체 인식, 객체의 3D 모델 추출, 스테레오 카메라에서 3D 좌표 생성\n",
+    "- 고해상도 영상 생성을 위한 이미지 스티칭, 영상 검색, 적목 현상 제거, 안구 운동 추척 등 다양한 응용 분야에 사용\n",
+    "- 4.7만 이상의 사용자 그룹과 1800만 번 이상의 다운로드 횟수"
    ]
   },
   {
