--- a/5 weeks.ipynb
+++ b/5 weeks.ipynb
@@ -92,7 +92,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 연습문제 18번"
+    "# 연습문제 18번\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "c = 200\n",
+    "r,sr,c2,c4 = c//2, c//4, c*2, c*4\n",
+    "img = np.full((c4,c4,3), 255, np.uint8)\n",
+    "blue, red = (255,0,0), (0,0,255)\n",
+    "\n",
+    "cv2.ellipse(img, (c2,c2), (r,r), 0,0,180, blue, -1)\n",
+    "cv2.ellipse(img, (c2,c2), (r,r), 180,0,180, red, -1)\n",
+    "cv2.ellipse(img, (c2+r-sr,c2), (sr,sr), 180,0,180, blue, -1)\n",
+    "cv2.ellipse(img, (c2-sr,c2), (sr,sr), 0,0,180, red, -1)\n",
+    "\n",
+    "left = (c2-int((c2/2)*(18+8)/24), c2 - sr)\n",
+    "right = (c2+int((c2/2)*(18+0)/24), c2 - sr)\n",
+    "\n",
+    "cv2.imshow('asdf', img[c2-c:c2+c, c2-r*3:c2+r*3])\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -137,7 +156,9 @@
    "id": "0ad7f580-bbde-4c59-a4c8-788292e3c6d6",
    "metadata": {},
    "source": [
-    "- 왜 image.T로 바꿨을때 실행이 안될까"
+    "- 왜 image.T로 바꿨을때 실행이 안될까\n",
+    "  - image.T: NumPy 방식으로 단순히 행과 열의 참조만 바꿔서 메모리가 불연속적이라 cv2.imshow()가 처리할 수 없음\n",
+    "  - cv2.transpose(): OpenCV가 인식 가능한 연속된 영상 데이터로 새로 만들어 주기 때문에 정상적으로 표시"
    ]
   }
  ],
