--- a/7 weeks.ipynb
+++ b/7 weeks.ipynb
@@ -13,9 +13,12 @@
     "  - 특정한 밝기값(역치값, threshold value)을 기준으로 그보다 어두운 화소는 검은색, 밝은 화소는 흰색으로 변환\n",
     "  - 스레시홀딩(thresholding)이라고도 함.\n",
     "- 전역 이진화(global thresholding)\n",
-    "  - sdf\n",
+    "  - 전체 이미지를 하나의 역치값으로 변환\n",
+    "  - 히스토그램 이용\n",
+    "  - 오츠 알고리즘\n",
     "- 적응형 이진화(adaptive thresholding)\n",
-    "  - asdf"
+    "  - 배경이 일정하지 않거나 배경색이 여러 가지인 경우\n",
+    "  - 영상의 영역에 따라 다른 역치값을 적용해 이진화함\n"
    ]
   },
   {
@@ -31,16 +34,16 @@
    "id": "f4d3a69a-606a-45ff-bc92-027f12735102",
    "metadata": {},
    "source": [
-    "- ret, out = cv2.thresholding(img, threshold, value, type__flag)\n",
+    "- ret, out = cv2.threshold(img, threshold, value, type__flag)\n",
     "  - img: Numpy 배열, 변환할 이미지\n",
     "  - threshold: 경계값\n",
     "  - value: 경계값 기준에 만족하는 픽셀에 적용할 값\n",
     "  - type_flag: 경계값 적용방법 지정\n",
-    "    - cv2.THRES_BINARY: px > threshold ? value : 0\n",
-    "    - cv2.\n",
-    "    - cv2.\n",
-    "    - cv2.\n",
-    "    - cv2.\n",
+    "    - cv2.THRESH_BINARY: px > threshold ? value : 0\n",
+    "    - cv2.THRESH_BINARY_INV: px > threshold ? 0 : value\n",
+    "    - cv2.THRESH_TRUNC: px > threshold ? value : px\n",
+    "    - cv2.THRESH_TOZERO: px > threshold ? px : 0\n",
+    "    - cv2.THRESH_TOZERO_INV: px > threshold ? 0 : px\n",
     "  - ret: 사용한 경계값\n",
     "  - out: 결과 바이너리 이미지"
    ]
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "c9c5e0d1-fee8-4376-b98e-508a54c7d77e",
    "metadata": {},
    "outputs": [],
@@ -74,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "2c39013a-ce92-4bb6-b1e1-d1134ed930ea",
    "metadata": {},
    "outputs": [
@@ -121,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "5ea8b241-318e-458d-9308-0784560ffdd2",
    "metadata": {},
    "outputs": [
@@ -148,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "beb42d3d-de50-4447-b00c-424f552d866c",
    "metadata": {},
    "outputs": [
@@ -185,17 +188,55 @@
    "metadata": {},
    "source": [
     "### 오츠(Otus) 알고리즘\n",
-    "- 전체적으로 어두운 이미지 -> 낮은 값으로 나눠야 적절하게 나눔, 전체적으로 밝은 이미지 -> 높은 값으로 나눠야 적절하게 나눔\n",
-    "  - 분산\n",
+    "- 이진화는 이미지를 두 개의 클래스로 나누는 분류(classification) 알고리즘으로 생각할 수 있음\n",
+    "- 클래스를 나누는데 드는 비용함수로 생각해 비용이 가장 적게 드는 상태가 가장 좋은 경우임\n",
+    "  - 경계값과 픽셀값의 차를 비용으로 간주"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d422335-1720-47e2-9cb1-1baf685d2f5d",
+   "metadata": {},
+   "source": [
+    "- 비용 함수\n",
+    "  - intra-class variance: 최소값 $\\to$ $\\sigma^2_w(t) = w_1(t) \\sigma^2_1(t) + w_2(t) \\sigma ^2_2$\n",
+    "  - inter-class variance: 최대값 $\\to$ $\\sigma^2_w(t) = w_1(t)w_2(t)(\\mu_1 - \\mu_2)^2$\n",
+    "    - t: 0~255(경계값)\n",
+    "    - $w_1, w_2$: 각 영역의 비율 가중치(전체 픽셀 수에서 각 영역에 속하는 픽셀 수의 비율)\n",
+    "    - $\\sigma^2_1, \\sigma^2_2$: 각 영역의 분산\n",
+    "    - $\\mu_1, \\mu_2$: 각 영역의 평균\n",
+    "- 두 분산에 대한 참조: https://www.statisticalaid.com/intra-class-vs-inter-classcorrelation/\n",
+    "- 다양한 값의 분포를 가진 영역에서 분산값이 가장 작은 값을 대표값으로 하기 좋음\n",
+    "- 한 값(threshold)으로 나눈 두 영역에서 각각의 분산값이 가장 작게 나오는 값을 찾는 알고리즘"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36e5b8f1-ce8d-40eb-9e79-31805b80bf28",
+   "metadata": {},
+   "source": [
+    "- intra-class variance: 분산값을 계산하기 때문에 오래걸림\n",
+    "- inter-class variance: 전체 분산값$(\\sigma^2(t))$는 threshold 값을 바꿔가면서 진행되는 알고리즘에서 상수값에 해당함, 각 클래스의 분산값은 식을 전개하면서 평균값의 연산$((\\mu_1(t) - \\mu_2(t))^2)$으로 대체되기 때문에 계산량이 적음\n",
+    "  - 실제로 구현할 때는 threshold 값을 0~255까지 차례로 적용하면서 이 평균값들도 점화식 형태로 계한해 계산 속도를 빠르게 함\n",
+    "- 인트라 클래스는 분산을 계산해야 하기에 계산량이 많고 느림<br>\n",
+    "  인터 클래스는 평균값 차이로 대체가 가능해 계산이 빠름"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e802ca92-7e12-4847-8d20-ba48fded7064",
+   "metadata": {},
+   "source": [
+    "- 전체적으로 어두운 이미지 -> 낮은 값으로 나눠야 적절하게 나눔<br>\n",
+    "  전체적으로 밝은 이미지 -> 높은 값으로 나눠야 적절하게 나눔\n",
     "- 분산 값이 커야 좋음\n",
     "  - 분산이 크다 -> 두 클래스의 평균이 멀리 떨어져 있다 -> 배경과 객체의 밝기가 잘 구분 됨\n",
-    "  - 클수록 좋은 이유: 서로 구별되는 정도가 크기 때문에 경계가 뚜렷하고 오류가 적음\n",
-    "- intra, inter"
+    "  - 클수록 좋은 이유: 서로 구별되는 정도가 크기 때문에 경계가 뚜렷하고 오류가 적음"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "902aebec-4855-4cb5-97eb-5ec0d9ca6f5e",
    "metadata": {},
    "outputs": [
@@ -247,6 +288,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a8183fb7-9708-4be6-b941-fd5ff7d55b96",
+   "metadata": {},
+   "source": [
+    "- cv2.adaptiveThreshold(img, value, method, type_flag, block_size, C)\n",
+    "  - img: 입력 영상\n",
+    "  - value: 경계값을 만족하는 픽셀에 적용할 값\n",
+    "  - method: 경계값을 만족하는 픽셀에 적용할 값\n",
+    "    - cv2.ADAPTIVE_THRESH_MEAN_C: 이웃 픽셀의 평균으로 결정\n",
+    "    - cv2.ADAPTIVE_THRESH_GAUSSIAN_C: 가우시안 분포에 따른 가중치의 합으로 결정\n",
+    "  - type_flag: 경계값 적용방법 지정(cv2.threshold() 함수와 동일)\n",
+    "  - block_size: 영역으로 나눌 이웃의 크기(n x n), 홀수(3,5,7,...)\n",
+    "  - C: 계산된 경계값 결과에서 가감할 상수(음수 가능)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e3df6865-796e-4fa2-91c7-bfb46a485c31",
    "metadata": {},
    "source": [
@@ -270,16 +327,75 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "183c3d5f-1258-4d69-b01d-74dbea9c718b",
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f8ed738e-ca13-4e6a-b294-c9cafb3ba5b9",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### ROI 함수"
+    "# HUV\n",
+    "import numpy as np, cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "capture = cv2.VideoCapture(0)\n",
+    "_, pre = capture.read()\n",
+    "pre_hsv = cv2.cvtColor(pre, cv2.COLOR_BGR2HSV)\n",
+    "pre_v = cv2.split(pre_hsv)[2]\n",
+    "while True:\n",
+    "   ret, frame = capture.read()\n",
+    "   if not ret: break\n",
+    "   if cv2.waitKey(30) >= 0: break\n",
+    "   frame = cv2.flip(frame, 1)   # 좌우반전\n",
+    "   frame_hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
+    "   frame_v = cv2.split(frame_hsv)[2]   # 밝기(value)값\n",
+    "   diff = cv2.absdiff(pre_v, frame_v)   # 차분 추출\n",
+    "   diff[diff<30] = 0\n",
+    "   cv2.imshow('absdiff', diff)\n",
+    "   pre_v = frame_v\n",
+    "capture.release()\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "id": "ecb76cc2-4944-4505-bd74-e92000448d00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YUV\n",
+    "import numpy as np, cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "capture = cv2.VideoCapture(0)\n",
+    "_, pre = capture.read()\n",
+    "pre_yuv = cv2.cvtColor(pre, cv2.COLOR_BGR2YUV)\n",
+    "pre_y = cv2.split(pre_yuv)[0]\n",
+    "while True:\n",
+    "   ret, frame = capture.read()\n",
+    "   if not ret: break\n",
+    "   if cv2.waitKey(30) >= 0: break\n",
+    "   frame = cv2.flip(frame, 1)   # 좌우반전\n",
+    "   frame_yuv = cv2.cvtColor(frame, cv2.COLOR_BGR2YUV)\n",
+    "   frame_y = cv2.split(frame_yuv)[0]\n",
+    "   diff = cv2.absdiff(pre_y, frame_y)\n",
+    "#  diff[diff<30] = 0\n",
+    "   cv2.imshow('absdiff', diff)\n",
+    "   pre_y = frame_y\n",
+    "capture.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "183c3d5f-1258-4d69-b01d-74dbea9c718b",
+   "metadata": {},
+   "source": [
+    "### ROI 함수\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "ac6ffd44-33db-4607-b4c7-c43b17ec2bd0",
    "metadata": {},
    "outputs": [],
@@ -307,6 +423,65 @@
     "cv2.imshow('bitwise_xor', image5)\n",
     "cv2.imshow('bitwise_not', image6)\n",
     "\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f15051bd-b95c-4115-b351-985b0a45b450",
+   "metadata": {},
+   "source": [
+    "### 관심영역\n",
+    "ret = cv2.selectROI([win_name,], img[, showCrossHair=True, fromCenter=Fasle])\n",
+    "\n",
+    "- win_name: ROI 선택을 진행할 창의 이름, str\n",
+    "- img: ROI 선택을 진행할 이미지, Numpy ndarray\n",
+    "- showCrossHair: 선택 영역 중심에 십자 모양 표시 여부\n",
+    "- fromCenter: 마우스 시작 지점을 영역의 중심으로 지정\n",
+    "- ret: 선택한 영역 좌표와 크기(x, y, w, h), 선택을 취소한 경우 모두 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82dc19b8-a6d5-46ee-9c07-81f4142e72f4",
+   "metadata": {},
+   "source": [
+    "- 영역 선택 후 spacebar나 enterkey를 누르면 좌표와 크기값이 반환됨\n",
+    "- c 키를 누르면 선택이 취소되고 리턴값은 모두 0이 됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "54aa71d2-32cb-422f-b0ff-3b7834d0cefc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np, cv2\n",
+    "\n",
+    "image=cv2.imread(\"images/bit_test.jpg\", cv2.IMREAD_COLOR)\n",
+    "logo=cv2.imread(\"images/logo.jpg\", cv2.IMREAD_COLOR)\n",
+    "if image is None or logo is None: raise Exception(\"영상파일 읽기 오류\")\n",
+    "\n",
+    "masks = cv2.threshold(logo, 220, 255, cv2.THRESH_BINARY)[1]\n",
+    "masks = cv2.split(masks)\n",
+    "\n",
+    "fg_pass_mask = cv2.bitwise_or(masks[0], masks[1])\n",
+    "fg_pass_mask = cv2.bitwise_or(masks[2], fg_pass_mask)\n",
+    "bg_pass_mask = cv2.bitwise_not(fg_pass_mask)\n",
+    "\n",
+    "(H,W), (h,w) = image.shape[:2], logo.shape[:2]\n",
+    "x, y = (W-w)//2, (H-h)//2\n",
+    "roi = image[y:y+h, x:x+w]\n",
+    "\n",
+    "foreground = cv2.bitwise_and(logo,logo,mask=fg_pass_mask)\n",
+    "background = cv2.bitwise_and(roi,roi,mask=bg_pass_mask)\n",
+    "\n",
+    "dst = cv2.add(background, foreground)\n",
+    "image[y:y+h, x:x+w] = dst\n",
+    "\n",
+    "cv2.imshow('image', image)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
