--- a/2 weeks.ipynb
+++ b/2 weeks.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "2a86518a-a378-4270-a2b8-1a9830a60fd3",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
    "source": [
     "- dim: 차원의 수\n",
     "- shape: 각 차원의 크기(튜플) -> 영상처리에서는 자주 사용되지 않지만 데이터 사이언스에서는 수시로 활용\n",
-    "- size: 전체 요소의 수\n",
+    "- size: 전체 요소의 수, 이미지의 크기(bytes)\n",
     "- dtype: 요소의 데이터 타입\n",
     "- itemsize: 각 요소의 바이트 크기"
    ]
@@ -154,8 +154,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d0d099d2-6fa2-4929-8c11-8eba36856b85",
+   "metadata": {},
+   "source": [
+    "- numpy 배열은 배열의 요소가 동일한 타입임\n",
+    "- 파이썬 리스트에 비해 자유도는 떨어지지만 c언어의 배열로 표현<br>\n",
+    "  $\\to$연산 속도가 리스트보다 매우 빠른 장점을 가짐\n",
+    "- 또 하나의 장점은 브로드캐스팅 연산"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "312b161b-fcfe-45b2-8f4a-1095e79109ac",
    "metadata": {},
    "outputs": [],
@@ -936,13 +947,13 @@
    "id": "8ec82477-9428-4872-ac07-b00021a6d4f9",
    "metadata": {},
    "source": [
-    "##### np의 난수 발생 메서드에는 차원을 지정해서 다차원 배열의 난수를 만들 수 있음\n",
-    "##### - rand(): 파이썬의 random()과 마찬가지로 0~1 사이의 난수를 발생\n",
-    "##### - randn(): 평균이 0, 분산이 1인 정규 분포(표준 정규 분포)를 따르는 난수를 발생\n",
+    "### np의 난수 발생 메서드에는 차원을 지정해서 다차원 배열의 난수를 만들 수 있음\n",
+    "- rand():  0~1 사이의 난수를 발생\n",
+    "- randn(): 평균이 0, 분산이 1인 정규 분포(표준 정규 분포)를 따르는 난수를 발생\n",
     "\n",
-    "##### 이미지에서 난수는 노이즈를 생성할 때 많이 사용, 일정한 분포를 가진 노이즈를 생성할 때 randn()을 사용\n",
-    "\n",
-    "##### + randint(): 정수 난수 발생, 파이썬 메서드의 randint()와 다르게 끝값이 포함되지 않음"
+    "- 이미지에서 난수는 노이즈를 생성할 때 많이 사용\n",
+    "  - 일정한 분포를 가진 노이즈를 생성할 때 randn()을 사용\n",
+    "- randint(): 정수 난수 발생, 파이썬 메서드의 randint()와 다르게 끝값이 포함되지 않음"
    ]
   },
   {
@@ -1021,7 +1032,8 @@
    "metadata": {},
    "source": [
     "### 배열 속성 변경\n",
-    "- ndarray.astype(dtype): dtype을 강제로 바꿈"
+    "- ndarray.astype(dtype): dtype을 강제로 바꿈\n",
+    "- 프로그램에 명시적으로 이 타입으로 변경한다 것을 보여주는 겨웅가 아니라면 보통 astype()을 써서 변경함"
    ]
   },
   {
@@ -1117,7 +1129,7 @@
    "id": "95c46b93-f249-4ef5-8106-3ecae3a7b757",
    "metadata": {},
    "source": [
-    "배열의 차원 변경\n",
+    "### 배열의 차원 변경\n",
     "- ndarray.reshape(newshape)\n",
     "- numpy.reshape(ndarray, newshape)\n",
     "\n",
@@ -1250,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "id": "52ece56c-7d49-410e-ad0a-c116d7b7ee26",
    "metadata": {},
    "outputs": [
@@ -1261,7 +1273,7 @@
        "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,12 +1285,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "id": "6f7f077e-8973-4a36-96bb-40d9cd88ec34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "b=a.reshape((6,)) # 요소의 총 개수를 센 후에 입력해야 함"
+    "b=a.reshape((6,)) # 요소의 총 개수를 센 후에 입력해야 함\n",
+    "b"
    ]
   },
   {
@@ -1330,7 +1354,20 @@
    "id": "b01a0c6a-9167-4c84-a470-7a49eebeb648",
    "metadata": {},
    "source": [
-    "### 브로드캐스팅 연산"
+    "### 브로드캐스팅 연산\n",
+    "- 차원의 수가 다른 배열 간의 이항 연산이나 크기가 다른 배열 간의 이항 연산을 가능하게 하는 연산\n",
+    "- 배열과 스칼라값의 연산이 많이 사용됨"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42e7df4e-631c-4fe2-96b0-fceb8f4d995f",
+   "metadata": {},
+   "source": [
+    "### 브로드캐스트 3규칙 요약\n",
+    "- 작은 차원의 배열은 왼쪽을 1로 채워서 차원을 맞춘다.\n",
+    "- 크기가 1인 차원은 늘려서 다른 배열의 크기에 맞춘다.\n",
+    "- 양쪽 모두 크기가 다르고 1도 아니면 불가능하다."
    ]
   },
   {
