--- a/2021301061_이상빈_마우스클릭로고.ipynb
+++ b/2021301061_이상빈_마우스클릭로고.ipynb
@@ -2,12 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "98913bf4-9e3c-4b04-af0d-a1811809ca0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np, cv2\n",
+    "\n",
+    "image = cv2.imread('images/test_img.jpg', cv2.IMREAD_COLOR)\n",
+    "logo = cv2.imread('images/logo.jpg', cv2.IMREAD_COLOR)\n",
+    "if image is None or logo is None: raise Exception('영상파일 읽기 오류')\n",
+    "\n",
+    "masks = cv2.threshold(logo, 220, 255, cv2.THRESH_BINARY)[1]\n",
+    "masks = cv2.split(masks)\n",
+    "\n",
+    "fg_pass_mask = cv2.bitwise_or(masks[0], masks[1])\n",
+    "fg_pass_mask = cv2.bitwise_or(masks[2], fg_pass_mask)\n",
+    "bg_pass_mask = cv2.bitwise_not(fg_pass_mask)\n",
     "\n",
     "def onMouse(event, x, y, flags, param):\n",
     "    global image, logo, fg_pass_mask, bg_pass_mask\n",
@@ -17,41 +28,23 @@
     "\n",
     "        (H, W), (h, w) = image.shape[:2], logo.shape[:2]\n",
     "        \n",
-    "        if x+w > W or y+h > H:\n",
-    "            return;\n",
-    "        else:\n",
-    "            logo_pt = logo\n",
-    "            fg_mask = fg_pass_mask\n",
-    "            bg_mask = bg_pass_mask\n",
+    "        if x < 0 or y < 0 or x+w > W or y+h > H:\n",
+    "            return\n",
     "\n",
     "        roi = img[y:y+h, x:x+w]\n",
     "\n",
-    "        foreground = cv2.bitwise_and(logo_pt, logo_pt, mask=fg_mask)\n",
-    "        background = cv2.bitwise_and(roi, roi, mask=bg_mask)\n",
+    "        foreground = cv2.bitwise_and(logo, logo, mask=fg_pass_mask)\n",
+    "        background = cv2.bitwise_and(roi, roi, mask=bg_pass_mask)\n",
     "        \n",
     "        dst = cv2.add(background, foreground)\n",
     "        img[y:y+h, x:x+w] = dst\n",
     "\n",
     "        cv2.imshow('image', img)\n",
     "\n",
-    "\n",
-    "image = cv2.imread('images/bit_test.jpg', cv2.IMREAD_COLOR)\n",
-    "logo = cv2.imread('images/logo.jpg', cv2.IMREAD_COLOR)\n",
-    "if image is None or logo is None: raise Exception('영상파일 읽기 오류')\n",
-    "\n",
-    "#backup_image = image.copy()\n",
-    "\n",
-    "masks = cv2.threshold(logo, 220, 255, cv2.THRESH_BINARY)[1]\n",
-    "masks = cv2.split(masks)\n",
-    "\n",
-    "fg_pass_mask = cv2.bitwise_or(masks[0], masks[1])\n",
-    "fg_pass_mask = cv2.bitwise_or(fg_pass_mask, masks[2])\n",
-    "bg_pass_mask = cv2.bitwise_not(fg_pass_mask)\n",
-    "\n",
     "cv2.imshow('image', image)\n",
     "cv2.setMouseCallback('image', onMouse)\n",
     "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()\n"
+    "cv2.destroyAllWindows()"
    ]
   }
  ],
