--- a/4 weeks.ipynb
+++ b/4 weeks.ipynb
@@ -15,18 +15,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6a7cba25-bc8a-4175-9176-955d8dd70f0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "추가 화소값:  51\n",
+      "추가 화소값:  51\n",
+      "추가 화소값:  51\n",
+      "추가 화소값:  51\n",
+      "추가 화소값:  51\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import cv2\n",
     "\n",
     "def onChange(value):\n",
     "    global img, title\n",
-    "    add_value = value - int(img[0][0])\n",
+    "    \n",
+    "    add_value = value - img[0][0]\n",
     "    print(\"추가 화소값: \", add_value)\n",
+    "\n",
+    "    # image += add_value\n",
     "    img = img + add_value if add_value > 0 else img - (- add_value)\n",
     "    cv2.imshow(title, img)\n",
     "\n",
@@ -42,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5da8475f-30e0-41ff-bbcc-a2c0920cd302",
    "metadata": {},
    "outputs": [],
@@ -84,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "99d325c0-894c-4640-a958-b817d2685244",
    "metadata": {},
    "outputs": [],
@@ -142,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "b7f2c565-4ea3-4c08-9c86-9261e1a30dc6",
    "metadata": {},
    "outputs": [],
@@ -199,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "f05a1e09-ef28-4f29-9516-5df455428de4",
    "metadata": {},
    "outputs": [],
@@ -237,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "27e4e496-d312-4ea3-89b5-46ecbff1656f",
    "metadata": {},
    "outputs": [],
@@ -268,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "430908b8-0a0f-4e89-9efa-cf9a0d4ae11f",
    "metadata": {},
    "outputs": [
@@ -276,20 +291,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=400x300 at 0x25E218D6C10>\n"
+      "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=400x300 at 0x29DBD55E270>\n"
      ]
     }
    ],
    "source": [
     "import PIL\n",
-    "img=PIL.Image.open('Image/read_color.jpg')\n",
+    "img=PIL.Image.open('images/read_color.jpg')\n",
     "print(img)\n",
     "img.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "46a5270d-e733-4046-bc89-27deb6f979ce",
    "metadata": {},
    "outputs": [],
@@ -325,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b0a62060-5027-422e-b761-4fc5b7515399",
    "metadata": {},
    "outputs": [],
@@ -355,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a2c3b499-646d-41cf-baf2-4e55f9ee3316",
    "metadata": {},
    "outputs": [],
@@ -404,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1a7a54d3-f762-4654-af72-3050e903c8fc",
    "metadata": {},
    "outputs": [],
@@ -454,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "2b06bdcd-0c5b-4b21-be41-5029a36cc141",
    "metadata": {},
    "outputs": [],
@@ -508,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "914a3e28-b8fd-4db3-8925-cfce2c5f4e6f",
    "metadata": {},
    "outputs": [],
@@ -565,6 +580,57 @@
     "pt = (-1, -1)\n",
     "start_pt = (-1, -1)\n",
     "title = \"Draw Event\"\n",
+    "cv2.imshow(title, image)\n",
+    "cv2.setMouseCallback(title, onMouse)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f9838246-51ce-4270-bad5-194078b81bb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "\n",
+    "def onMouse(event, x, y, flags, param):\n",
+    "    global image, start_pt, drawing, title\n",
+    "\n",
+    "    temp = image.copy()  # 매번 원본 복사\n",
+    "\n",
+    "    if event == cv2.EVENT_LBUTTONDOWN or event == cv2.EVENT_RBUTTONDOWN:\n",
+    "        drawing = True\n",
+    "        start_pt = (x, y)\n",
+    "\n",
+    "    elif event == cv2.EVENT_MOUSEMOVE:\n",
+    "        if drawing:\n",
+    "            cv2.line(temp, start_pt, (x, y), (0, 0, 0), 2)\n",
+    "            cv2.imshow(title, temp)\n",
+    "\n",
+    "    elif event == cv2.EVENT_LBUTTONUP:\n",
+    "        drawing = False\n",
+    "        if pt == (x, y): return\n",
+    "        else:\n",
+    "            cv2.rectangle(image, start_pt, (x, y), (255, 0, 0), 2)\n",
+    "            cv2.imshow(title, image)\n",
+    "\n",
+    "    elif event == cv2.EVENT_RBUTTONUP:\n",
+    "        drawing = False\n",
+    "        if pt == (x, y): return\n",
+    "        else:\n",
+    "            dx, dy = start_pt[0] - x, start_pt[1] - y\n",
+    "            radius = int(np.sqrt(dx**2 + dy**2))\n",
+    "            cv2.circle(image, start_pt, radius, (0, 0, 255), 2)\n",
+    "            cv2.imshow(title, image)\n",
+    "\n",
+    "image = np.full((400, 600, 3), 255, np.uint8)\n",
+    "start_pt = (-1, -1)\n",
+    "drawing = False\n",
+    "title = \"Pointer RubberBand\"\n",
+    "\n",
     "cv2.imshow(title, image)\n",
     "cv2.setMouseCallback(title, onMouse)\n",
     "cv2.waitKey(0)\n",
