--- a/12 weeks.ipynb
+++ b/12 weeks.ipynb
@@ -208,8 +208,36 @@
    "id": "70b51ecc-79ca-481c-b1cf-420d3a71221e",
    "metadata": {},
    "source": [
-    "### 기하학적 처리의 기본\n",
-    "- ㅁㄴㅇㄹ"
+    "### 가하학적 처리의 기본\n",
+    "- 화소들의 배치 변경 $\\to$ 사상의 의미 이해 필요\n",
+    "- RST 변환: 회전 크기변경, 평행이동"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddc3d87c-a22c-4efc-8b35-326767b2e66b",
+   "metadata": {},
+   "source": [
+    "### 사상\n",
+    "- 화소들의 배치를 변경할 때, 입력영상의 좌표가 매핑되는 목적 영상의 좌표를 찾아서 화소값을 옮기는 과정"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b6639ec-e41d-4e1f-8427-0daa34f012e5",
+   "metadata": {},
+   "source": [
+    "### 순방향 사상\n",
+    "- 원본 영상의 좌표를 중심으로 목적 영상의 좌표를 계산하여 화소의 위치를 변환하는 방식\n",
+    "- 홀이나 오버랩 문제가 발생"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13d0b1ab-7037-456e-91cf-1c1d43205351",
+   "metadata": {},
+   "source": [
+    "### 역방향 사상"
    ]
   },
   {
